centered pic and name

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="/resources/image/20190709_195714.jpg" alt="Picture of Marque">
-    <h1>Hi I am Marque</h1>
+    <div>
+        <img src="/resources/images/20190709_195714.jpg" alt="Picture of Marque">
+    </div>
+    
+        <h1>Hi I am Marque</h1>
     
 </body>
 </html>
