--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li>Home</li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li class="hov"><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
 <div>
