--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
+            <li><a href="/Task-1-Simple-Personal-Website/index.html">Home</a></li>
             <li>Contact</li>
         </ul>
     </nav>
