--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
 <div>
     <img src="resources/images/20190709_195714.jpg" alt="Pic of Marque">
-        <h1>Hi, I am Marque</h1>
+        <h1>Hi, I am Marque!</h1>
             <p>I am from Los Angeles, California and I am trying to become a Software Developer</p>
 </div>
     
